--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "weather_app_js",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.cjs"
   },
   "repository": {
     "type": "git",
